--- a/file.html
+++ b/file.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
-<script src="file.js"></script>
+<script src="promise.js"></script>
+<script src="async.js"></script> 
 </html>
